--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,10 @@ astunparse==1.6.3
 cachetools==5.5.2
 certifi==2025.7.14
 charset-normalizer==3.4.2
+contourpy==1.3.2
+cycler==0.12.1
 flatbuffers==25.2.10
+fonttools==4.58.5
 gast==0.4.0
 google-auth==2.40.3
 google-auth-oauthlib==0.4.6
@@ -11,18 +14,25 @@ google-pasta==0.2.0
 grpcio==1.73.1
 h5py==3.14.0
 idna==3.10
+imutils==0.5.4
 keras==2.10.0
 Keras-Preprocessing==1.1.2
+kiwisolver==1.4.8
 libclang==18.1.1
 Markdown==3.8.2
 MarkupSafe==3.0.2
+matplotlib==3.10.3
 numpy==2.2.6
 oauthlib==3.3.1
+opencv-python==4.12.0.88
 opt_einsum==3.4.0
 packaging==25.0
+pillow==11.3.0
 protobuf==3.19.6
 pyasn1==0.6.1
 pyasn1_modules==0.4.2
+pyparsing==3.2.3
+python-dateutil==2.9.0.post0
 requests==2.32.4
 requests-oauthlib==2.0.0
 rsa==4.9.1
